--- a/src/app/de-thi/de-thi.component.html
+++ b/src/app/de-thi/de-thi.component.html
@@ -1,77 +1,87 @@
-<app-header title="'Đề Thi'"></app-header>
+<app-header title="'Đề thi'"></app-header>
 <main class="de-thi">
 
     <div class="search-filter-container">
         <div class="search-box">
-            <input type="text" placeholder="Tìm kiếm đề thi" [(ngModel)]="searchTerm" (keyup)="applyFilter()">
+            <input type="text" placeholder="Tìm kiếm đề thi">
             <button>
                 <i class="fas fa-search"></i>
             </button>
         </div>
-        <button class="filter-btn">
-            Bộ lọc <i class="fas fa-filter"></i>
-        </button>
-        <button class="create-btn" (click)="createNewExam()">
-            Tạo mới <i class="fas fa-plus"></i>
-        </button>
+        <div class="filter-group">
+            <button class="add-exam-btn">
+                Thêm đề thi <i class="fas fa-plus"></i>
+            </button>
+            <button class="filter-btn">
+                Bộ lọc <i class="fas fa-filter"></i>
+            </button>
+        </div>
     </div>
 
     <div class="table-container">
         <table>
             <thead>
                 <tr>
-                    <th>Số TT</th>
-                    <th>Tên Đề Thi</th>
+                    <th>Số thứ tự</th>
+                    <th>Tên đề thi</th>
                     <th>Môn Học</th>
+                    <th>Số câu hỏi</th>
                     <th>Thời gian</th>
-                    <th>Số câu</th>
                     <th>Người tạo</th>
                     <th>Ngày Tạo</th>
                     <th>Hành động</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let exam of filteredExams; let i = index">
-                    <td>{{ (currentPage - 1) * itemsPerPage + i + 1 }}</td>
-                    <td>{{ exam.name }}</td>
-                    <td>{{ exam.subject }}</td>
-                    <td>{{ exam.duration }} phút</td>
-                    <td>{{ exam.questionCount }}</td>
-                    <td>{{ exam.creator }}</td>
-                    <td>{{ exam.createdDate | date:'dd/MM/yyyy' }}</td>
-                    <td class="action">
-                        <button (click)="viewExam(exam.id)" title="Xem chi tiết">
-                            <i class="fas fa-eye"></i>
+                <tr *ngFor="let dethi  of dethis; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ dethi.name }}</td>
+                    <td>{{ dethi.subject }}</td>
+                    <td>{{ dethi.numques }}</td>
+                    <td>{{ dethi.time }}</td>
+                    <td>{{ dethi.creator }}</td>
+                    <td>{{ dethi.date }}</td>
+                    <td class='action'>
+                        <!-- From Uiverse.io by catraco -->
+                        <button>
+                            <div class="heart-container" title="Like">
+                                <input type="checkbox" class="checkbox" id="Give-It-An-Id">
+                                <div class="svg-container">
+                                    <svg viewBox="0 0 24 24" class="svg-outline" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z">
+                                        </path>
+                                    </svg>
+                                    <svg viewBox="0 0 24 24" class="svg-filled" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z">
+                                        </path>
+                                    </svg>
+                                    <svg class="svg-celebrate" width="100" height="100"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <polygon points="10,10 20,20"></polygon>
+                                        <polygon points="10,50 20,50"></polygon>
+                                        <polygon points="20,80 30,70"></polygon>
+                                        <polygon points="90,10 80,20"></polygon>
+                                        <polygon points="90,50 80,50"></polygon>
+                                        <polygon points="80,80 70,70"></polygon>
+                                    </svg>
+                                </div>
+                            </div>
                         </button>
-                        <button (click)="editExam(exam.id)" title="Chỉnh sửa">
-                            <i class="fas fa-edit"></i>
-                        </button>
-                        <button (click)="deleteExam(exam.id)" title="Xóa">
+                        <button (click)="deleteDethi(dethi.id)">
                             <i class="fas fa-trash-alt"></i>
                         </button>
-                        <button (click)="exportExam(exam.id)" title="Xuất file">
-                            <i class="fas fa-file-export"></i>
+                        <button (click)="editDethi(dethi.id)">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                        <button (click)="viewDethi(dethi.id)">
+                            <i class="fas fa-eye"></i>
                         </button>
                     </td>
-                </tr>
-                <tr *ngIf="filteredExams.length === 0">
-                    <td colspan="8" class="no-data">Không có dữ liệu đề thi</td>
+
                 </tr>
             </tbody>
         </table>
-
-        <div class="pagination" *ngIf="filteredExams.length > 0">
-            <button (click)="previousPage()" [disabled]="currentPage === 1">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <span *ngFor="let page of getPages()"
-                  (click)="goToPage(page)"
-                  [class.active]="page === currentPage">
-                {{ page }}
-            </span>
-            <button (click)="nextPage()" [disabled]="currentPage === totalPages">
-                <i class="fas fa-chevron-right"></i>
-            </button>
-        </div>
     </div>
 </main>
