--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,12 +1,12 @@
 .header {
     padding: 1.5rem;
-    font-family: Helvetica, Arial, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
     width:  93%;
     margin-left: auto;
     margin-bottom: 1.5rem;
     border-radius: 8px;
     font-size: 1.5rem;
-    font-weight: 800;
+    font-weight: 300;
     color: white;
     position: fixed;
     z-index: 1;
