--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-header *ngIf="showLayout"></app-header>
+<app-header *ngIf="showLayoutlogin" ></app-header>
+
 <div class="main-container ">
-    <app-sidebar *ngIf="showLayout"></app-sidebar>
+    <app-sidebar *ngIf="showLayoutlogin"></app-sidebar>
+ 
     <app-tooltip></app-tooltip>
     <router-outlet></router-outlet>
 </div>
