--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,6 @@
 //     display: flex;
 //     min-heights: calc(100vh - 60px);
 //   }
+* {
+    font-family: Helvetica, Arial, Tahoma, sans-serif;
+}
