--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,7 @@
-
-<!-- 
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="login.component.scss">
-  <title>Login Page</title>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-</head> -->
 <div id="body">
+    <div class="background">
+      <img src="/images/login_image.png" alt="Login Background" class="background">
+    </div>
     <div class="login">
       <!-- Logo account -->
       <div class="account-icon">
@@ -18,14 +12,14 @@
       <form class="login-form" >
         <div class="form-group">
           <div class="input-container">
-            <input type="text" id="username" name="username" [(ngModel)]="username" placeholder="Tên đăng nhập">
+            <input type="text" id="username" name="username" [(ngModel)]="model.username" placeholder="Tên đăng nhập">
             <i class="fas fa-user input-icon"></i>
           </div>
         </div>
   
         <div class="form-group">
           <div class="input-container">
-            <input type="password" id="password" name="password" [(ngModel)]="password" placeholder="Mật khẩu">
+            <input type="password" id="password" name="password" [(ngModel)]="model.password_hash" placeholder="Mật khẩu">
             <i class="fas fa-lock input-icon"></i>
           </div>
         </div>
@@ -35,13 +29,16 @@
           <label for="teacher">Bạn là giảng viên?</label>
         </div>
   
-        <button type="button" class="login-button" (click)="submit()">Đăng nhập</button>
+        <button type="button" class="login-button" (click)="login()">Đăng nhập</button>
   
-        <div class="form-links">
+        <!-- <div class="form-links">
           <a href="#" class="forgot-password">Quên mật khẩu?</a>
-          <span>Bạn chưa có tài khoản? <a href="#" class="register-link">Đăng kí ngay!</a></span>
-        </div>
+          <span>Bạn chưa có tài khoản? 
+            <a class="register-link" href="#" (click)="navigateToSignup(); $event.preventDefault()">Đăng kí ngay!</a>
+
+          </span>
+        </div> -->
       </form>
     </div>
   </div>
-  
+
