--- a/fontend/src/app/dashboard/dashboard.component.html
+++ b/fontend/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
             <img class="card-icon" 
                  src="https://storage.googleapis.com/a1aa/image/G6ssLIrDKQ7AOqvrNOZZDTpTM_FSy4meTbmw4QCOI1M.jpg"
                  alt="Students icon">
-            <div class="card-value">0</div>
+            <div class="card-value">{{ totalStudents }}</div>
             <div class="card-label">Tổng số học sinh</div>
         </div>
 
@@ -16,7 +16,7 @@
             <img class="card-icon" 
                  src="https://storage.googleapis.com/a1aa/image/dFOxWhyriR82VOM_PAXfT3Krtnx3bXZ76Yt3VbeISl4.jpg"
                  alt="Questions icon">
-            <div class="card-value">0</div>
+            <div class="card-value">{{ totalQuestions }}</div>
             <div class="card-label">Tổng số câu hỏi đã tạo</div>
         </div>
 
@@ -25,7 +25,7 @@
             <img class="card-icon" 
                  src="https://storage.googleapis.com/a1aa/image/6Ukuy3nSm_N4IzOVoBSpzLHXHHSEw3uc98DOlJ0Qdh0.jpg"
                  alt="Exams icon">
-            <div class="card-value">0</div>
+            <div class="card-value">{{ totalExams }}</div>
             <div class="card-label">Tổng số đề đã tạo</div>
         </div>
 
